package Triptop.Applicatie.model;

public enum BetalingsStatus {
    GESTART,
    VERWERKING,
    PENDING,
    VOLTOOID,
    GEANNULEERD,
    MISLUKT
}
