
@startuml
title Class Diagram – TripTop Betalingsintegratie

interface BetalingAdapter {
    +Betaling verwerkBetaling(BetalingsVerzoek verzoek)
    +DetailedBetalingStatus controleerStatus(String betalingId)
}

class StripeAdapter {
    +Betaling verwerkBetaling(BetalingsVerzoek verzoek)
    +DetailedBetalingStatus controleerStatus(String betalingId)
}

class PaypalAdapter {
    +Betaling verwerkBetaling(BetalingsVerzoek verzoek)
    +DetailedBetalingStatus controleerStatus(String betalingId)
}

class BetalingFactory {
    +BetalingAdapter createBetalingAdapter(BetalingsMethode methode)
}

interface BetalingService {
    +BetalingsResultaat verwerkBetaling(BetalingsVerzoek verzoek)
    +DetailedBetalingStatus haalBetalingOp(String betalingId)
}

class BetalingServiceImpl {
    -BetalingRepository repository
    -BetalingFactory factory
    +BetalingsResultaat verwerkBetaling(BetalingsVerzoek verzoek)
    +DetailedBetalingStatus haalBetalingOp(String betalingId)
}

class BetalingController {
    -BetalingService service
    +BetalingsResultaat verwerkBetaling(BetalingsVerzoek verzoek)
    +DetailedBetalingStatus controleerStatus(String betalingId)
}

interface BetalingRepository {
}

class BetalingsVerzoek {
    -String reserveringId
    -double bedrag
    -BetalingsMethode methode
}

class DetailedBetalingStatus {
    -String betalingId
    -BetalingsStatus status
    -double bedrag
    -BetalingsMethode methode
    -LocalDateTime tijdstempel
}

class BetalingsResultaat {
    -String betalingId
    -BetalingsStatus status
    -String redirectUrl
}

class Betaling {
    -String betalingId
    -String reserveringId
    -String redirectUrl
    -double bedrag
    -BetalingsStatus status
    -BetalingsMethode methode
    -LocalDateTime tijdstempel
}

enum BetalingsMethode {
    STRIPE
    PAYPAL
}

enum BetalingsStatus {
    GESTART
    VERWERKING
    PENDING
    VOLTOOID
    GEANNULEERD
    MISLUKT
}

BetalingController --> BetalingService: "gebruikt"
BetalingServiceImpl ..|> BetalingService: "implementeert"
BetalingServiceImpl --> BetalingFactory: "gebruikt"
BetalingServiceImpl --> BetalingRepository: "gebruikt"
BetalingFactory --> BetalingAdapter: "creëert"
StripeAdapter ..|> BetalingAdapter: "implementeert"
PaypalAdapter ..|> BetalingAdapter: "implementeert"
BetalingServiceImpl --> BetalingsVerzoek: "verwerkt"
BetalingServiceImpl --> BetalingsResultaat: "retourneert"
BetalingServiceImpl --> Betaling: "beheert"
BetalingsVerzoek --> BetalingsMethode: "gebruikt"
BetalingsResultaat --> BetalingsStatus: "bevat"
Betaling --> BetalingsMethode: "bevat"
Betaling --> BetalingsStatus: "bevat"
DetailedBetalingStatus --> BetalingsStatus: "bevat"
DetailedBetalingStatus --> BetalingsMethode: "bevat"

@enduml
